--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/fiber": "^8.12.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/three": "^0.150.0",
+    "framer-motion": "^10.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "shadergradient": "^1.1.5",
     "styled-components": "^5.3.9",
+    "three": "^0.150.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.8.7"
+    "prettier": "2.8.7",
+    "tailwindcss": "^3.3.1"
   }
 }
